symmetrical-broccoli-routetable-us-west-1
{
    "RouteTable": {
        "Associations": [], 
        "RouteTableId": "rtb-09c6956d", 
        "VpcId": "vpc-d18516b5", 
        "PropagatingVgws": [], 
        "Tags": [], 
        "Routes": [
            {
                "GatewayId": "local", 
                "DestinationCidrBlock": "10.10.10.0/24", 
                "State": "active", 
                "Origin": "CreateRouteTable"
            }
        ]
    }
}
